--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "0.19.0",
     "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.16.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
     "redux": "4.0.4",
     "redux-promise-middleware": "6.1.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "url-loader": "2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
@@ -52,7 +55,6 @@
     "mini-css-extract-plugin": "0.8.0",
     "redux-logger": "3.0.6",
     "style-loader": "0.23.1",
-    "url-loader": "2.1.0",
     "webpack": "4.36.1",
     "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.7.2"
