--- a/package.json
+++ b/package.json
@@ -46,14 +46,20 @@
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "autoprefixer": "^9.7.1",
     "babel-loader": "8.0.6",
     "copy-webpack-plugin": "5.0.4",
     "create-react-class": "15.6.3",
     "css-loader": "3.1.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "gh-pages": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
     "redux-logger": "3.0.6",
+    "sass-loader": "^8.0.0",
     "style-loader": "0.23.1",
     "webpack": "4.36.1",
     "webpack-cli": "3.3.6",
