--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build-prod": "webpack --mode production",
     "start": "webpack-dev-server --open",
     "predeploy": "npm run build-prod",
-    "deploy": "gh-pages -d docs"
+    "deploy": "gh-pages -d docs",
+    "lint": "eslint src/ --ext .jsx,.js",
+    "lint-fix": "eslint src/ --ext .jsx,.js --fix"
   },
   "browserslist": [
     "> 1%",
@@ -29,14 +31,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "0.19.0",
+    "babel-eslint": "^10.0.3",
     "bootstrap": "4.3.1",
     "jquery": "3.4.1",
     "popper.js": "1.16.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
     "redux": "4.0.4",
+    "redux-logger": "3.0.6",
     "redux-promise-middleware": "6.1.1",
     "redux-thunk": "2.3.0",
     "url-loader": "2.1.0"
@@ -53,12 +58,17 @@
     "css-loader": "3.1.0",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gh-pages": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
-    "redux-logger": "3.0.6",
     "sass-loader": "^8.0.0",
     "style-loader": "0.23.1",
     "webpack": "4.36.1",
