--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
      steps:
        - checkout
        - run: npm ci
-       - run: npm run test
+       - run: npm test
        - run: echo "Complete"
 
 workflows:
