--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,5 @@ jobs:
      steps:
        - checkout
        - run: npm ci
-       - run: npm run test
+       - run: npm test
        - run: echo "Complete"
-
-workflows:
-  version: 2
-  deploy:
-    jobs:
-      - build:
-          filters:
-            branches:
-              only:
-                - master
